# llm-inference-lab

./: .gitignore  DATA.md  LICENSE  README.md  pyproject.toml
.github/workflows/: pages.yml
configs/: aws.yaml  batching.yaml  experiment.yaml  kv_cache.yaml  quantization.yaml  smoke.yaml  smoke_studies.yaml  speculative.yaml
dashboard/: app.js  batching.html  batching.js  data.js  deepdive.html  deepdive.js  examples.html  examples.js  exp-data.js  glossary.html  glossary.js  index.html  kvcache.html  kvcache.js  models-data.js  models.html  models.js  opt.js  optimizations.html  scorecard.html  scorecard.js  speculative.html  speculative.js  styles.css  summary.js  ui.js
infra/: README.md
infra/terraform/: .gitignore  main.tf  outputs.tf  terraform.tfvars.example  user_data.sh.tftpl  variables.tf
local-lab/: README.md  build_dashboard.py  build_exp_dashboard.py  configs.coder3b.yaml  configs.dev.yaml  configs.yaml  experiments.py  harness.py  report.py  run_eval.py  smoke.yaml  tasks.py  watch.py
local-lab/exp_configs/: dev.yaml  full.yaml  full10.yaml  full_small.yaml
local-lab/results/: Gemma-2-2B.json  Gemma-2-9B.json  Llama-3.1-8B.json  (+7 more)
results/: batch-1-1782666388-1.json  batch-16-1782666411-16.json  batch-2-1782666391-2.json  batch-32-1782666420-32.json  batch-4-1782666395-4.json  batch-8-1782666402-8.json  mlx-bf16-1782665390.json  mlx-int4-1782665929.json  mlx-int4-1782665962.json  mlx-int4-1782665995.json  mlx-int4-1782666024.json  mlx-int4-1782666052.json  mlx-int4-1782666080.json  mlx-int8-1782665719.json
scripts/: dev.sh  run_local_studies.sh
(+31 files in other folders)
